--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ngx-bootstrap": "^6.2.0",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.5.4",
+    "rxjs-operators": "^1.1.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
